add liquibase, entities